--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,7 +7,7 @@
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <%= render "common/navbar" %>
             <div class="row">
                 <div class="col-md-2">
