--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -13,7 +13,7 @@
                 <% current_cart.cart_items.each do |cart_item| %>
                     <tr>
                         <td>
-                            <%= link_to(cart_item.product.title, product_path(cart_item.peoduct)) %>
+                            <%= link_to(cart_item.product.title, product_path(cart_item.product)) %>
                         </td>
                         <td>
                             <%= cart_item.product.price %>
@@ -31,7 +31,7 @@
       </span>
         </div>
         <hr>
-        <h2>订单咨询</h2>
+        <h2>订单资讯</h2>
         <div class="order-form">
             <%= simple_form_for @order do |f| %>
                 <legend>订购人</legend>
