--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<h2> New Post </h2>
+<h2> Edit Post </h2>
 <%= simple_form_for [:admin, @post] do |f| %>
     <div class="group">
         <%= f.input :title %>
