--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,12 +8,12 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <%= link_to("关于我们", posts_path(:category => "关于我们") )%>
+                    <%= link_to("关于我们", aboutus_posts_path )%>
                 </li>
                 <li><%= link_to("产品中心", products_path )%></li>
-                <li><%= link_to("方案介绍", posts_path(:category => "方案介绍") )%></li>
-                <li><%= link_to("资讯动态", posts_path(:category => "资讯动态") )%></li>
-                <li><%= link_to("联系我们", posts_path(:category => "联系我们") )%></li>
+                <li><%= link_to("方案介绍", plansintroduction_posts_path )%></li>
+                <li><%= link_to("资讯动态", news_posts_path )%></li>
+                <li><%= link_to("联系我们", contactus_posts_path )%></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
