--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,6 +16,17 @@
         <div class="product-price">
             ¥ <%= @product.price %>
         </div>
+        <div class="col-md-12">
+            <%= @product.category %>
+        </div>
+        <div class="pull-left">
+            <% if @product.attachment.present? %>
+                <i class="fa fa-paperclip"> </i>
+                <%= link_to("Download Handbook", @product.attachment_url) %>
+            <% else %>
+                No Attachment
+          <% end %>
+        </div>
         <div class="pull-right">
             <% if @product.quantity.present? && @product.quantity > 0 %>
                 <%= link_to("加入购物车",add_to_cart_product_path(@product), :method => :post, :class => "btn btn-primary btn-lg btn-danger")%>
