--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -15,6 +15,18 @@
                 <li><%= link_to("资讯动态", news_posts_path )%></li>
                 <li><%= link_to("联系我们", contactus_posts_path )%></li>
             </ul>
+            <div class="nav navbar-nav navbar-left">
+                <%= form_tag search_products_path , :method => :get  do %>
+                    <div class="input-group" id="search-id" >
+                        <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索...">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                <% end %>
+            </div>
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <%= link_to carts_path do %>
