--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -4,7 +4,7 @@
         <div class="search-info-title">
             Sorry, The search content cannot be blank, please type some product into to search.
     </div>
-    <% elsif @products.blank? %>
+    <% elsif @products.blank? && @posts.blank?%>
         <br>
         <h2 class="search-info-title">对不起，没有找到相关信息</h2>
     <% else %>
@@ -24,8 +24,20 @@
                 <% end %>
             </div>
         </div>
-        <div class="text-center">
-            <%= will_paginate(@products, renderer: BootstrapPagination::Rails) %>
+        <div class="search-result">
+            <div class="row products-show0"></div>
+            <div class="product-table">
+                <% @posts.each do |post| %>
+                    <div class="row products-show">
+                        <div class="col-md-12 col-lg-9 col-lg-offset-1">
+                            <div class="pull-right">
+                                发布时间：<%= post.created_at.to_date %>
+                            </div>
+                            <p ><%= link_to(render_highlight_content_post(post,@query_string),post_path(post)) %></p>
+                        </div>
+                    </div>
+                <% end %>
+            </div>
         </div>
     <% end %>
 </div>
