add hide product function

--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -21,5 +21,8 @@
     <div class="group">
         <%= f.input :attachment %>
     </div>
+    <div class="group">
+        <%= f.input :is_hidden %>
+    </div>
     <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
 <% end %>
