--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -28,13 +28,21 @@
                     <% end %>
                 </td>
                 <td>
-                    <%= product.title %>
+                    <%= render_product_status(product)%>
+                    <%= link_to(product.title, product_path(product)) %>
                 </td>
                 <td>
                     <%= product.price %>
                 </td>
                 <td>
                     <%= link_to("Edit",edit_admin_product_path(product))%>
+                    |<%= link_to("Destroy", admin_product_path(product), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
+                    |
+                    <% if product.is_hidden %>
+                        <%= link_to("Publish", publish_admin_product_path(product), :method => :post, :class => "btn btn-xs btn-default") %>
+                    <% else %>
+                        <%= link_to("Hide", hide_admin_product_path(product), :method => :post, :class => "btn btn-xs btn-default") %>
+                    <% end %>
                 </td>
             </tr>
         <% end %>
