--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -9,5 +9,8 @@
     <div class="group">
         <%= f.cktext_area :description, ckeditor: { toolbar: 'mini', language: 'zh-CN'} %>
     </div>
+    <div class="group">
+        <%= f.input :is_hidden %>
+    </div>
     <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
 <% end %>
