--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -6,6 +6,7 @@
             <th>生成时间</th>
             <th>订购者</th>
             <th>订单状态</th>
+            <th>选项</th>
         </tr>
     </thead>
     <tbody>
@@ -15,6 +16,10 @@
                 <td><%= order.created_at.to_s(:long)%></td>
                 <td><%= order.user.email%></td>
                 <td><%= order.aasm_state%></td>
+                <td>
+                    <%= link_to "向上", move_up_admin_order_path(order), method: :patch %>
+                    <%= link_to "向下", move_down_admin_order_path(order), method: :patch %>
+                </td>
             </tr>
         <% end %>
     </tbody>
