--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -32,6 +32,8 @@
                     <% else %>
                         <%= link_to("Hide", hide_admin_post_path(post) , :method => :post, :class => "btn btn-xs btn-default") %>
                     <% end %>
+                    <%= link_to "向上", move_up_admin_post_path(post), method: :patch %>
+                    <%= link_to "向下", move_down_admin_post_path(post), method: :patch %>
                 </td>
             </tr>
         <% end %>
