--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -43,6 +43,10 @@
                     <% else %>
                         <%= link_to("Hide", hide_admin_product_path(product), :method => :post, :class => "btn btn-xs btn-default") %>
                     <% end %>
+                    |
+                    <%= link_to "向上", move_up_admin_product_path(product), method: :patch %>
+                    |
+                    <%= link_to "向下", move_down_admin_product_path(product), method: :patch %>
                 </td>
             </tr>
         <% end %>
