--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -15,12 +15,14 @@
     <div class="group">
         <%= f.input :category %>
     </div>
-    <% if @product.image.present? %>
-        <span>目前商品图</span> <br>
-        <%= image_tag (@product.image.thumb.url)%>
-    <% end %>
     <div class="group">
-        <%= f.input :image, as: :file %>
+        <% if @product.photos.present? %>
+            <span>目前商品图</span><br>
+            <% @product.photos.each do |p| %>
+                <%= image_tag p.image.thumb.url %><br />
+            <% end %>
+        <% end %>
+        <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>（"请上传5张图片"）
     </div>
     <div class="group">
         <%= f.input :attachment %>
