--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -20,10 +20,10 @@
                 </td>
                 <td>
                     <%= link_to product_path(product) do %>
-                        <% if product.image.present? %>
-                            <%= image_tag(product.image.thumb.url, class: "thumbnail")%>
+                        <% if product.photos.present? %>
+                            <%= image_tag(product.photos[0].image.thumb.url, class: "img-thumbnail") %>
                         <% else %>
-                            <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail")%>
+                            <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
                         <% end %>
                     <% end %>
                 </td>
