--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -16,7 +16,7 @@
         <%= f.input :category %>
     </div>
     <div class="group">
-        <%= f.input :image, as: :file %>
+        <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>（"请上传5张图片"）
     </div>
     <div class="group">
         <%= f.input :attachment %>
