--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,25 @@
 <div class="row">
-    <div class="col-md-6">
-        <% if @product.image.present? %>
-            <%= image_tag(@product.image.medium.url, class:"thumbnail")%>
-        <% else %>
-            <%= image_tag("http://placehold.it/400x400&text=No Pic", class: "thumbnail") %>
-        <% end %>
+    <div class="col-md-12">
+        <div class="preview col-md-6 " >
+            <div class="preview-pic tab-content" >
+                <% if @product.photos.present? %>
+                    <div class="tab-pane active" id="pic-1"><%= image_tag(@product.photos[0].image.medium.url) %></div>
+                    <div class="tab-pane" id="pic-2"><%= image_tag(@product.photos[1].image.medium.url) %></div>
+                    <div class="tab-pane" id="pic-3"><%= image_tag(@product.photos[2].image.medium.url) %></div>
+                    <div class="tab-pane" id="pic-4"><%= image_tag(@product.photos[3].image.medium.url) %></div>
+                    <div class="tab-pane" id="pic-5"><%= image_tag(@product.photos[4].image.medium.url) %></div>
+                </div>
+                <ul class="preview-thumbnail nav nav-tabs">
+                    <li class="active"><a data-target="#pic-1" data-toggle="tab"><%= image_tag(@product.photos[0].image.thumb.url) %></a></li>
+                    <li><a data-target="#pic-2" data-toggle="tab"><%= image_tag(@product.photos[1].image.thumb.url) %></a></li>
+                    <li><a data-target="#pic-3" data-toggle="tab"><%= image_tag(@product.photos[2].image.thumb.url) %></a></li>
+                    <li><a data-target="#pic-4" data-toggle="tab"><%= image_tag(@product.photos[3].image.thumb.url) %></a></li>
+                    <li><a data-target="#pic-5" data-toggle="tab"><%= image_tag(@product.photos[4].image.thumb.url) %></a></li>
+                </ul>
+            <% end %>
+        </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-12">
         <h2><%= @product.title %></h2>
         <div style="height:100px;">
             <p>
