--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <%= link_to("关于我们", aboutus_posts_path )%>
+                    <%= link_to("关于我们", aboutus_post_path(7) )%>
                 </li>
                 <li><%= link_to("产品中心", products_path )%></li>
                 <li><%= link_to("方案介绍", plansintroduction_posts_path )%></li>
