--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,9 +12,10 @@
             <div class="row">
                 <div class="col-md-2">
                     <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
-                        <li class="active"><%= link_to("Products",admin_products_path )%></li>
-                        <li class="active"><%= link_to("Orders",admin_orders_path)%></li>
-                        <li class="active"><%= link_to("Posts",admin_posts_path)%></li>
+                        <li class="active"><%= link_to("产品",admin_products_path )%></li>
+                        <li class="active"><%= link_to("订单",admin_orders_path)%></li>
+                        <li class="active"><%= link_to("文章",admin_posts_path)%></li>
+                        <li class="active"><%= link_to("留言",admin_messages_path)%></li>
                     </ul>
                 </div>
                 <div class="col-md-10">
