--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,8 @@
+<ul>
+    <li><%= link_to("网桥", products_path(:category => "网桥")) %></li>
+    <li><%= link_to("POE", products_path(:category => "POE")) %></li>
+    <li><%= link_to("AP", products_path(:category => "AP")) %></li>
+</ul>
 <div class="row">
     <% @products.each do |product| %>
         <div class="col-xs-6 col-md-3">
