--- a/app/views/news/posts/index.html.erb
+++ b/app/views/news/posts/index.html.erb
@@ -1,7 +1,7 @@
 <% @posts.each do |post| %>
     <tr>
         <td>
-            <%= link_to(post.title, aboutus_post_path(post)) %>
+            <%= link_to(post.title, news_post_path(post)) %>
         </td>
     </tr>
 <% end %>
