--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -14,6 +14,13 @@
                 <li><%= link_to("方案介绍", plansintroduction_posts_path )%></li>
                 <li><%= link_to("资讯动态", news_posts_path )%></li>
                 <li><%= link_to("联系我们", contactus_posts_path )%></li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= t('language_switch') %><span class="caret"></span></a>
+                    <ul class="dropdown-menu">      <!-- 語系選項 -->
+                        <li><%= link_to "簡中版", :controller => controller_name, :action => action_name, :locale => "zh-CN" %></li>
+                        <li><%= link_to "繁中版", :controller => controller_name, :action => action_name, :locale => "zh-TW" %></li>
+                        <li><%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %></li>
+                    </ul>
+                </li>
             </ul>
             <div class="nav navbar-nav navbar-left">
                 <%= form_tag search_products_path , :method => :get  do %>
