--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,19 +1,19 @@
 <h2> Edit Product </h2>
 <%= simple_form_for [:admin, @product] do |f| %>
     <div class="group">
-        <%= f.input :title %>
+        <%= f.input :title ,:label => "产品名称"%>
     </div>
     <div class="group">
-        <%= f.input :description %>
+        <%= f.input :description ,:label => "产品描述"%>
     </div>
     <div class="group">
-        <%= f.input :quantity %>
+        <%= f.input :quantity ,:label => "数量"%>
     </div>
     <div class="group">
-        <%= f.input :price %>
+        <%= f.input :price ,:label => "价格"%>
     </div>
     <div class="group">
-        <%= f.input :category %>
+        <%= f.input :category ,:label => "分类：网桥 POE AP"%>
     </div>
     <div class="group">
         <% if @product.photos.present? %>
@@ -25,10 +25,10 @@
         <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>（"请上传5张图片"）
     </div>
     <div class="group">
-        <%= f.input :attachment %>
+        <%= f.input :attachment ,:label => "产品PDF"%>
     </div>
     <div class="group">
-        <%= f.input :is_hidden %>
+        <%= f.input :is_hidden ,:label => "勾选为隐藏"%>
     </div>
-    <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
+    <%= f.submit "提交", data: { disable_with: "Submitting..." } %>
 <% end %>
