--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,6 +3,7 @@
     <head>
         <title>Jdstore 后台</title>
         <%= csrf_meta_tags %>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'true' %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
     </head>
