--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,3 +126,58 @@
     margin-right: 1em; }
   .flickr_pagination .next_page {
     margin-left: 1em; }
+
+
+//navbar
+
+.navbar-default {
+  background-color: #181818;//背景颜色
+  border-color: #181818;//边框色
+  margin-bottom: 0;//底部 margin 不撑开距离
+}
+
+@media (min-width: 768px) {
+     .navbar {        border-radius: 0;//圆角为0
+     }
+   }
+
+   .navbar-default .navbar-brand {
+     color: #2196F3;//字体颜色
+     padding: 10px 15px;//上下10px,左右15px
+     line-height: 30px;//文字行高
+   }
+   .navbar-default .navbar-brand:hover,
+   .navbar-default .navbar-brand:focus {
+     color: #2196F3;//鼠标放置在链接上的文字颜色   theme-color
+     background-color: transparent;//鼠标放置在链接上的背景颜色，这里设为透明
+   }
+
+   .navbar-default .navbar-nav > li > a{
+  color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #2196F3;
+  background-color: transparent;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #2196F3;
+  background-color: transparent;
+}
+
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:focus,
+.navbar-default .navbar-nav > .open > a:hover {
+    background-color: transparent;
+    color: #2196F3;
+}
+
+.navbar-brand > img {
+    display: inline-block;	//图片和链接文字显示在同一行
+    margin-right: 10px; //图片和链接文字拉开一点距离
+    width: 32px; //定制图片宽度
+    height: 32px; //定制图片高度
+}
