--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">JDStore </a>
+            <a class="navbar-brand" href="/"><img src="https://ww4.sinaimg.cn/large/006tNc79ly1fh3d9k1mm5j300w00wmwx.jpg" alt="logo">JDStore </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -13,25 +13,19 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse navbar-ex1-collapse collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li>
-                    <%= link_to("关于我们", aboutus_post_path(7) )%>
-                </li>
-                <li><%= link_to("产品中心", products_path )%></li>
-                <li><%= link_to("方案介绍", plansintroduction_posts_path )%></li>
-                <li><%= link_to("资讯动态", news_posts_path )%></li>
-                <li><%= link_to("联系我们", contactus_posts_path )%></li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= t('language_switch') %><span class="caret"></span></a>
-                    <ul class="dropdown-menu">      <!-- 語系選項 -->
-                        <li><%= link_to "簡中版", :controller => controller_name, :action => action_name, :locale => "zh-CN" %></li>
-                        <li><%= link_to "繁中版", :controller => controller_name, :action => action_name, :locale => "zh-TW" %></li>
-                        <li><%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %></li>
-                    </ul>
-                </li>
+                <li><%= link_to("首页", root_path )%></li>
+                <li><%= link_to("产品", products_path )%></li>
+                <li><%= link_to("方案", plansintroduction_posts_path )%></li>
+                <li><%= link_to("商城", products_path )%></li>
+                <li><%= link_to("无线知识", news_posts_path )%></li>
+                <li><%= link_to("网络知识", contactus_posts_path )%></li>
+                <li><%= link_to("云管理", news_posts_path )%></li>
+                <li><%= link_to("论坛", news_posts_path )%></li>
             </ul>
-            <div class="nav navbar-nav navbar-left">
+            <div class="nav navbar-nav navbar-left" style="width: 386px;padding-top: 8px;padding-left: 90px;>
                 <%= form_tag search_products_path , :method => :get  do %>
                     <div class="input-group" id="search-id" >
-                        <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索...">
+                        <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索产品或文章...">
                         <div class="input-group-btn">
                             <button class="btn btn-default" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
