--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     </head>
     <body>
         <div class="container-fluid">
-            <%= render "common/navbar" %>
+            <div class="row">
+                <%= render "common/navbar" %>
+            </div>
             <%= render "common/flashes" %>
             <%= yield %>
         </div>
