--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -14,7 +14,7 @@
         <div class="navbar-collapse navbar-ex1-collapse collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><%= link_to("首页", root_path )%></li>
-                <li><%= link_to("产品", products_path )%></li>
+                <li><%= link_to("产品", warehouse_products_path )%></li>
                 <li><%= link_to("方案", plansintroduction_posts_path )%></li>
                 <li><%= link_to("商城", products_path )%></li>
                 <li><%= link_to("无线知识", news_posts_path )%></li>
