--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -17,10 +17,10 @@
                 <li><%= link_to("产品", warehouse_products_path )%></li>
                 <li><%= link_to("方案", plansintroduction_posts_path )%></li>
                 <li><%= link_to("商城", products_path )%></li>
-                <li><%= link_to("无线知识", news_posts_path )%></li>
+                <li><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
                 <li><%= link_to("网络知识", contactus_posts_path )%></li>
-                <li><%= link_to("云管理", news_posts_path )%></li>
-                <li><%= link_to("论坛", news_posts_path )%></li>
+                <li><%= link_to("云管理", contactus_posts_path )%></li>
+                <li><%= link_to("论坛", contactus_posts_path )%></li>
             </ul>
             <div class="nav navbar-nav navbar-left" style="width: 386px;padding-top: 8px;padding-left: 90px;>
                 <%= form_tag search_products_path , :method => :get  do %>
