--- a/app/views/layouts/aboutus_layout.html.erb
+++ b/app/views/layouts/aboutus_layout.html.erb
@@ -7,8 +7,10 @@
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
     </head>
     <body>
-        <div class="container">
-            <%= render "common/navbar" %>
+        <div class="container-fluid">
+            <div class="row">
+                <%= render "common/navbar" %>
+            </div>
             <div class="row">
                 <div class="col-md-2">
                     <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
