back to front post show bug fix

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -20,7 +20,7 @@
                 <li><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
                 <li><%= link_to("网络知识", netinfo_posts_path )%></li>
                 <li><%= link_to("云管理", contactus_posts_path )%></li>
-                <li><%= link_to("论坛", contactus_posts_path )%></li>
+                <li><%= link_to("论坛", aboutus_posts_path )%></li>
             </ul>
             <div class="nav navbar-nav navbar-left" style="width: 386px;padding-top: 8px;padding-left: 90px;>
                 <%= form_tag search_products_path , :method => :get  do %>
