--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,7 +1,57 @@
-<footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2017 JDStore
-        <br>
-        Design by Jo
-
-    </p>
+<footer class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="row">
+                    <div class="col-md-2 col-xs-4">
+                        <h4>推荐产品</h4>
+                        <ul class="list-unstyled">
+                            <li><%= link_to("AW", root_path )%></li>
+                            <li><%= link_to("CW", root_path )%></li>
+                            <li><%= link_to("SW", root_path )%></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2 col-xs-4">
+                        <h4>服务</h4>
+                        <ul class="list-unstyled">
+                            <li><%= link_to("代理商查询", root_path )%></li>
+                            <li><%= link_to("技术支持", root_path )%></li>
+                            <li><%= link_to("方案资讯", root_path )%></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2 col-xs-4">
+                        <h4>关于我们</h4>
+                        <ul class="list-unstyled">
+                            <li><%= link_to("关于ccccc", root_path )%></li>
+                            <li><%= link_to("加入我们", root_path )%></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2 col-xs-4">
+                        <h4> 商务合作</h4>
+                        <ul class="list-unstyled">
+                            <li><%= link_to("开放招商", root_path )%></li>
+                            <li><%= link_to("采购相关", root_path )%></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 col-xs-12 ">
+                        <ul class="list-unstyled">
+                            <br>
+                            <p>在线服务热线</p>
+                            <p style="font-size:24px;">
+                                4001-888-222
+                            </p>
+                            <br>
+                            微信公众号
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <hr>
+                    <p>
+                        Copyright ©2017 cccccc 版权所有 保留一切权利 蜀B2-20170706 联系方式：1234567890
+                  </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
