navbar fixed ontop

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,7 +21,7 @@
                         <li class="active"><%= link_to("留言",admin_messages_path)%></li>
                     </ul>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-10" style="margin-top:50px;">
                     <%= yield %>
                 </div>
             </div>
