--- a/app/views/layouts/aboutus_layout.html.erb
+++ b/app/views/layouts/aboutus_layout.html.erb
@@ -21,7 +21,7 @@
                         <li class="active"><%= link_to("企业达人",aboutus_post_path(7))%></li>
                     </ul>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-10" style="margin-top:50px;">
                     <%= yield %>
                 </div>
             </div>
