--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,14 @@
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
     <body>
-        <div class="container-fluid">
-            <div class="row">
+        <div class="container-fluid" style="min-height:550px;">
+            <div class="row" style="margin-bottom:50px;">
                 <%= render "common/navbar" %>
             </div>
             <div class="row">
                 <%= render "common/flashes" %>
             </div>
-            <div style="margin-top:50px;">
+            <div >
                 <%= yield %>
             </div>
         </div>
