--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,26 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.welcome_p1 {
+  a{
+    font-size: 30px;
+    color: #fff;
+    text-decoration: none;
+  }
+
+  a:hover, a:focus {
+    color: #fff;
+    text-decoration: none;
+}
+}
+
+.welcome_p2 {
+  a{
+    font-size: 20px;
+    color: #000;
+    text-decoration: none;
+  }
+
+  a:hover, a:focus {
+    color: #000;
+    text-decoration: none;
+}
+}
