--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
             <div class="row">
                 <%= render "common/flashes" %>
             </div>
-            <div >
+            <div class="row">
                 <%= yield %>
             </div>
         </div>
