--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -1,1 +1,20 @@
-index
+<ul>
+    <li><%= link_to("网桥", products_path(:category => "网桥")) %></li>
+    <li><%= link_to("POE", products_path(:category => "POE")) %></li>
+    <li><%= link_to("AP", products_path(:category => "AP")) %></li>
+</ul>
+<div class="row">
+    <% @products.each do |product| %>
+        <div class="col-xs-6 col-md-3">
+            <%= link_to product_path(product) do  %>
+                <% if product.photos.present? %>
+                    <%= image_tag(product.photos[0].image.thumb.url , class: "thumbnail") %>
+                <% else %>
+                    <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
+                <% end %>
+            <% end %>
+            <%= product.title %> ¥ <%= product.price%>
+        </div>
+    <% end %>
+</div>
+<%= will_paginate @products , class: "apple_pagination"%>
