--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,19 +10,8 @@
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-8 col-md-offset-2 text-center">
             <h2>新品推荐</h2>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3">
-            1
-    </div>
-        <div class="col-md-6">
-            ppp
-    </div>
-        <div class="col-md-3">
-            2
-    </div>
     </div>
 </div>
