--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
             <h2>新品推荐</h2>
+            更多<i class="fa fa-chevron-right" aria-hidden="true"></i>
         </div>
     </div>
 </div>
