--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,62 +1,30 @@
 <div class="container-fluid">
     <div class="row">
         <div class="welcome_p1">
-            <%= link_to root_path, target: "_blank" do %>
-                <img src="https://ww4.sinaimg.cn/large/006tNc79ly1fh5n508rgvj313z0k8q3r.jpg" alt="product1"  style="width:100%;">
-                <div class="welcome_p1_slogan">
-                    <p style="margin-top: -20%;margin-left: 80%;">BBBBB
-                      <br>
-                        AAAAA
-                      <br>
-                        CCCCC
-                    </p>
-                </div>
+            <%= link_to @intro1.link, target: "_blank" do %>
+                <%= image_tag(@intro1.image, :class => "width-100") %>
             <% end %>
         </div>
     </div>
-    <div class="row" style="margin-top: 149px;margin-bottom:269px;">
-        <div class="col-md-4" style="padding-left: 0px;padding-right: 0px;">
+    <div class="row">
+        <div class="col-md-4">
             <div class="welcome_p2">
-                <%= link_to root_path, target: "_blank" do %>
-                    <img src="https://ww4.sinaimg.cn/large/006tNc79ly1fh5n8cumkzj30fk0fkglj.jpg" alt="product2"  style="width:100%;">
-                    <div class="welcome_p1_slogan">
-                        <p style="margin-top: -90%;margin-left: 50%;">BBBBB
-                        <br>
-                            AAAAA
-                        <br>
-                            CCCCC
-                      </p>
-                    </div>
+                <%= link_to @intro1.link, target: "_blank" do %>
+                    <%= image_tag(@intro1.image, :class => "width-100") %>
                 <% end %>
             </div>
         </div>
-        <div class="col-md-4" style="padding-left: 0px;padding-right: 0px;">
+        <div class="col-md-4">
             <div class="welcome_p2">
-                <%= link_to root_path, target: "_blank" do %>
-                    <img src="https://ww4.sinaimg.cn/large/006tNc79ly1fh5n8cumkzj30fk0fkglj.jpg" alt="product3"  style="width:100%;">
-                    <div class="welcome_p1_slogan">
-                        <p style="margin-top: -90%;margin-left: 50%;">BBBBB
-                        <br>
-                            AAAAA
-                        <br>
-                            CCCCC
-                      </p>
-                    </div>
+                <%= link_to @intro1.link, target: "_blank" do %>
+                    <%= image_tag(@intro1.image, :class => "width-100") %>
                 <% end %>
             </div>
         </div>
-        <div class="col-md-4" style="padding-left: 0px;padding-right: 0px;">
+        <div class="col-md-4">
             <div class="welcome_p2">
-                <%= link_to root_path, target: "_blank" do %>
-                    <img src="https://ww4.sinaimg.cn/large/006tNc79ly1fh5n8cumkzj30fk0fkglj.jpg" alt="product4"  style="width:100%;">
-                    <div class="welcome_p1_slogan">
-                        <p style="margin-top: -90%;margin-left: 50%;">BBBBB
-                        <br>
-                            AAAAA
-                        <br>
-                            CCCCC
-                      </p>
-                    </div>
+                <%= link_to @intro1.link, target: "_blank" do %>
+                    <%= image_tag(@intro1.image, :class => "width-100") %>
                 <% end %>
             </div>
         </div>
