welcome intro done

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,30 +1,30 @@
 <div class="container-fluid">
     <div class="row">
         <div class="welcome_p1">
-            <%= link_to @intro1.link, target: "_blank" do %>
-                <%= image_tag(@intro1.image, :class => "width-100") %>
+            <%= link_to @intro.link, target: "_blank" do %>
+                <%= image_tag(@intro.image, :class => "width-100") %>
             <% end %>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4">
             <div class="welcome_p2">
-                <%= link_to @intro1.link, target: "_blank" do %>
-                    <%= image_tag(@intro1.image, :class => "width-100") %>
+                <%= link_to @intro.link, target: "_blank" do %>
+                    <%= image_tag(@intro.image, :class => "width-100") %>
                 <% end %>
             </div>
         </div>
         <div class="col-md-4">
             <div class="welcome_p2">
-                <%= link_to @intro1.link, target: "_blank" do %>
-                    <%= image_tag(@intro1.image, :class => "width-100") %>
+                <%= link_to @intro.link, target: "_blank" do %>
+                    <%= image_tag(@intro.image, :class => "width-100") %>
                 <% end %>
             </div>
         </div>
         <div class="col-md-4">
             <div class="welcome_p2">
-                <%= link_to @intro1.link, target: "_blank" do %>
-                    <%= image_tag(@intro1.image, :class => "width-100") %>
+                <%= link_to @intro.link, target: "_blank" do %>
+                    <%= image_tag(@intro.image, :class => "width-100") %>
                 <% end %>
             </div>
         </div>
