--- a/app/views/admin/ads/index.html.erb
+++ b/app/views/admin/ads/index.html.erb
@@ -1,6 +1,6 @@
-<h2> Intros List </h2>
+<h2> ads List </h2>
 <div class="pull-right" style="padding-bottom: 20px;">
-    <%= link_to("新增首页大广告", new_admin_intro_path, class:"btn btn-primary btn-sm")%>
+    <%= link_to("新增首页小广告", new_admin_ad_path, class:"btn btn-primary btn-sm")%>
 </div>
 <table class="table table-bordered">
     <thead>
@@ -12,24 +12,24 @@
         </tr>
     </thead>
     <tbody>
-        <% @intros.each do |intro| %>
+        <% @ads.each do |ad| %>
             <tr>
                 <td>
-                    <%= intro.id %>
+                    <%= ad.id %>
                 </td>
                 <td>
-                    <% if intro.image.present? %>
-                        <%= image_tag(intro.image.url, class: "img-thumbnail") %>
+                    <% if ad.image.present? %>
+                        <%= image_tag(ad.image.url, class: "img-thumbnail") %>
                     <% else %>
                         <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
                     <% end %>
                 </td>
                 <td>
-                    <%= intro.link %>
+                    <%= ad.link %>
                 </td>
                 <td>
-                    <%= link_to("Edit",edit_admin_intro_path(intro))%>|
-                    <%= link_to("Delete", admin_intro_path(intro),method: :delete,:data => { :confirm => "Are you sure?" }) %>
+                    <%= link_to("Edit",edit_admin_ad_path(ad))%>|
+                    <%= link_to("Delete", admin_ad_path(ad),method: :delete,:data => { :confirm => "Are you sure?" }) %>
                 </td>
             </tr>
         <% end %>
