--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -19,7 +19,8 @@
                         <li class="active"><%= link_to("订单",admin_orders_path)%></li>
                         <li class="active"><%= link_to("文章",admin_posts_path)%></li>
                         <li class="active"><%= link_to("留言",admin_messages_path)%></li>
-                        <li class="active"><%= link_to("首页广告",admin_intros_path)%></li>
+                        <li class="active"><%= link_to("首页大广告",admin_intros_path)%></li>
+                        <li class="active"><%= link_to("首页小广告",admin_ads_path)%></li>
                     </ul>
                 </div>
                 <div class="col-md-10">
