--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,15 +131,15 @@
 //navbar
 
 .navbar-default {
-  background-color: #181818;//背景颜色
-  border-color: #181818;//边框色
+  background-color: rgba(26, 26, 26, 0.9);//背景颜色
+  border-color: #1a1a1a;//边框色
   margin-bottom: 0;//底部 margin 不撑开距离
 }
 
-@media (min-width: 768px) {
-     .navbar {        border-radius: 0;//圆角为0
+
+.navbar {        border-radius: 0;//圆角为0
      }
-   }
+
 
    .navbar-default .navbar-brand {
      color: #2196F3;//字体颜色
@@ -174,14 +174,6 @@
     background-color: transparent;
     color: #2196F3;
 }
-
-.navbar-brand > img {
-    display: inline-block;	//图片和链接文字显示在同一行
-    margin-right: 10px; //图片和链接文字拉开一点距离
-    width: 32px; //定制图片宽度
-    height: 32px; //定制图片高度
-}
-
 
 .navbar-fixed-top {
     top: 0px;
