--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="/"><img src="https://ww4.sinaimg.cn/large/006tNc79ly1fh3d9k1mm5j300w00wmwx.jpg" alt="logo">JDStore </a>
+            <a class="navbar-brand" href="/" style="padding-left:120px;"> Convolum </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -13,40 +13,22 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse navbar-ex1-collapse collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><%= link_to("首页", root_path )%></li>
-                <li><%= link_to("产品", warehouse_products_path )%></li>
-                <li><%= link_to("方案", plansintroduction_posts_path )%></li>
-                <li><%= link_to("商城", products_path )%></li>
-                <li><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
-                <li><%= link_to("网络知识", netinfo_posts_path )%></li>
-                <li><%= link_to("云管理", contactus_posts_path )%></li>
-                <li><%= link_to("论坛", aboutus_posts_path )%></li>
+                <li style="padding-left:45px;"><%= link_to("首页", root_path )%></li>
+                <li style="padding-left:45px;"><%= link_to("产品", warehouse_products_path )%></li>
+                <li style="padding-left:45px;"><%= link_to("方案", plansintroduction_posts_path )%></li>
+                <li style="padding-left:45px;"><%= link_to("商城", products_path )%></li>
+                <li style="padding-left:45px;"><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
+                <li style="padding-left:20px;"><%= link_to("网络知识", netinfo_posts_path )%></li>
+                <li style="padding-left:20px;"><%= link_to("云管理", contactus_posts_path )%></li>
             </ul>
-            <div class="nav navbar-nav navbar-left" style="width: 386px;padding-top: 8px;padding-left: 90px;>
-                <%= form_tag search_products_path , :method => :get  do %>
-                    <div class="input-group" id="search-id" >
-                        <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索产品或文章...">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                <% end %>
-            </div>
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <%= link_to carts_path do %>
-                        购物车 <i class="fa fa-shopping-cart"> </i>(<%= current_cart.products.count %> )
-                  <% end %>
-                </li>
                 <% if !current_user %>
                     <li><%= link_to("注册", new_user_registration_path) %> </li>
                     <li><%= link_to(content_tag(:i, '登入', class: 'fa fa-sign-in'), new_user_session_path) %></li>
                 <% else %>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Hi!, <%= current_user.email %>
+                            <i class="fa fa-user-o" aria-hidden="true"></i><%= current_user.email %>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
@@ -55,6 +37,11 @@
                                     <%= link_to("Admin 选单", admin_products_path) %>
                                 </li>
                             <% end %>
+                            <li>
+                                <%= link_to carts_path do %>
+                                    <i class="fa fa-shopping-cart"> 购物车</i>(<%= current_cart.products.count %> )
+                              <% end %>
+                            </li>
                             <li>
                                 <%= link_to("个人订单列表", account_orders_path)%>
                             </li>
