--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,10 +1,10 @@
-<footer class="footer">
+<footer class="footer" style="padding-top:40px;">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <div class="row">
+            <div class="col-md-10 col-md-offset-1" >
+                <div class="row" style="margin-bottom:20px;">
                     <div class="col-md-2 col-xs-4">
-                        <h4>推荐产品</h4>
+                        <h4 style="margin-bottom: 22px;">推荐产品</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("AW", root_path )%></li>
                             <li><%= link_to("CW", root_path )%></li>
@@ -12,7 +12,7 @@
                         </ul>
                     </div>
                     <div class="col-md-2 col-xs-4">
-                        <h4>服务</h4>
+                        <h4 style="margin-bottom: 22px;">服务</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("代理商查询", root_path )%></li>
                             <li><%= link_to("技术支持", root_path )%></li>
@@ -20,14 +20,14 @@
                         </ul>
                     </div>
                     <div class="col-md-2 col-xs-4">
-                        <h4>关于我们</h4>
+                        <h4 style="margin-bottom: 22px;">关于我们</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("关于ccccc", root_path )%></li>
                             <li><%= link_to("加入我们", root_path )%></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-xs-4">
-                        <h4> 商务合作</h4>
+                        <h4 style="margin-bottom: 22px;"> 商务合作</h4>
                         <ul class="list-unstyled">
                             <li><%= link_to("开放招商", root_path )%></li>
                             <li><%= link_to("采购相关", root_path )%></li>
@@ -37,18 +37,17 @@
                         <ul class="list-unstyled">
                             <br>
                             <p>在线服务热线</p>
-                            <p style="font-size:24px;">
+                            <p style="font-size:30px;">
                                 4001-888-222
                             </p>
-                            <br>
-                            微信公众号
+                            <p style="font-size:16px;">微信公众号</p>
                         </ul>
                     </div>
                 </div>
                 <div class="row">
                     <hr>
-                    <p>
-                        Copyright ©2017 cccccc 版权所有 保留一切权利 蜀B2-20170706 联系方式：1234567890
+                    <p style="margin-top:38px;margin-bottom:80px;">
+                        Copyright ©2017 Convolum 版权所有 保留一切权利 蜀B2-20170706 联系方式：1234567890
                   </p>
                 </div>
             </div>
