--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -60,6 +60,9 @@
                                 <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
                             <% end %>
                         <% end %>
+                        <%= product.title %>
+                        <br>
+                        <%= product.slogan %>
                     </div>
                 <% end %>
             </div>
