--- a/app/assets/stylesheets/warehouse/products.scss
+++ b/app/assets/stylesheets/warehouse/products.scss
@@ -34,3 +34,41 @@
 .left-15 {
   margin-left:15px;
 }
+
+.bg-white {
+  background-color: #fff;
+}
+
+.show-pic {
+    display: block;
+    padding: 0px;
+    padding-bottom: 20px;
+    padding-right: 5px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 0px solid #ddd;
+    border-radius: 0px;
+    -webkit-transition: border 0.2s ease-in-out;
+    -o-transition: border 0.2s ease-in-out;
+    transition: border 0.2s ease-in-out;
+}
+
+.show-slogan {
+  padding-bottom: 10px;
+  margin-bottom: 0px;
+}
+
+.show-slogan-2 {
+  padding-bottom: 25px;
+  margin-bottom: 0px;
+}
+
+.product-title {
+  color: #333333;
+  font-size: 14px;
+}
+
+.product-slogan {
+  color: #666666;
+  font-size: 13px;
+}
