warehouse index done

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,11 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
+            <ul>
+                <li><%= link_to("网桥", products_path(:category => "aw")) %></li>
+                <li><%= link_to("POE", products_path(:category => "POE")) %></li>
+                <li><%= link_to("AP", products_path(:category => "AP")) %></li>
+            </ul>
         </div>
     </div>
 </div>
