--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -8,7 +8,7 @@
             <th>#</th>
             <th width="220">Product Pic</th>
             <th>Name</th>
-            <th>Price</th>
+            <th>Category</th>
             <th width="300">Options</th>
         </tr>
     </thead>
@@ -32,7 +32,7 @@
                     <%= link_to(product.title, product_path(product)) %>
                 </td>
                 <td>
-                    <%= product.price %>
+                    <%= product.category %>
                 </td>
                 <td>
                     <%= link_to("Edit",edit_admin_product_path(product))%>
