--- a/app/assets/stylesheets/plansintroduction/posts.scss
+++ b/app/assets/stylesheets/plansintroduction/posts.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the plansintroduction::posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.post-pic {
+    display: block;
+    padding: 0px;
+    padding-top: 20px;
+    padding-right: 0px;
+    margin-left: 12px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 0px solid #ddd;
+    border-radius: 0px;
+    -webkit-transition: border 0.2s ease-in-out;
+    -o-transition: border 0.2s ease-in-out;
+    transition: border 0.2s ease-in-out;
+}
+
+.post-title {
+  color: #666666;
+  font-size: 21px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  margin-left: 12px;
+  margin-bottom: 0px;
+  width: 430px;
+}
+
+.post-slogan {
+  color: #999999;
+  font-size: 13px;
+  margin-left: 12px;
+  margin-bottom: 0px;
+  padding-bottom: 30px;
+  width: 430px;
+}
