--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,21 +1,2 @@
-<h2> New Post </h2>
-<%= simple_form_for [:admin, @post] do |f| %>
-    <div class="group">
-        <%= f.input :title ,:label => "文章标题"%>
-    </div>
-    <div class="group">
-        <% Post::CATEGORY.each do |c| %>
-            <label>
-                <%= f.radio_button :category, c %>
-                <%= t(c, :scope => "post.category") %>
-            </label>
-        <% end %>
-    </div>
-    <div class="group">
-        <%= f.cktext_area :description, ckeditor: { toolbar: 'mini', language: 'zh-CN'} %>
-    </div>
-    <div class="group">
-        <%= f.input :is_hidden ,:label => "勾选为隐藏"%>
-    </div>
-    <%= f.submit "提交", data: { disable_with: "Submitting..." } %>
-<% end %>
+<h2><span class="fa fa-file-text-o"></span>新建文章</h2>
+<%= render('form') %>
