--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -50,9 +50,11 @@
             <div class="row space-30">
                 <h3 class="cp-title left-15">AW系列 <span class="cp-title-2 left-15">性能设计 科技外观</span></h3>
             </div>
-            <div class="row space-30">
+            <div class="row">
                 <% @productsaw.each do |product| %>
                     <div class="col-xs-6 col-md-3 text-center">
+                        <div class="space-30">
+                        </div>
                         <%= link_to product_path(product) do  %>
                             <% if product.photos.present? %>
                                 <%= image_tag(product.photos[0].image.thumb.url , class: "show-pic") %>
@@ -71,9 +73,11 @@
             <div class="row space-30">
                 <h3 class="cp-title left-15">CW系列 <span class="cp-title-2 left-15">先进科技 业界领先</span></h3>
             </div>
-            <div class="row space-30">
+            <div class="row">
                 <% @productscw.each do |product| %>
                     <div class="col-xs-6 col-md-3 text-center">
+                        <div class="space-30">
+                        </div>
                         <%= link_to product_path(product) do  %>
                             <% if product.photos.present? %>
                                 <%= image_tag(product.photos[0].image.thumb.url , class: "show-pic") %>
@@ -92,9 +96,11 @@
             <div class="row space-30">
                 <h3 class="cp-title left-15">SW系列 <span class="cp-title-2 left-15">先进科技 业界领先</span></h3>
             </div>
-            <div class="row space-30">
+            <div class="row">
                 <% @productssw.each do |product| %>
                     <div class="col-xs-6 col-md-3 text-center">
+                        <div class="space-30">
+                        </div>
                         <%= link_to product_path(product) do  %>
                             <% if product.photos.present? %>
                                 <%= image_tag(product.photos[0].image.thumb.url , class: "show-pic") %>
