upvote function done

--- a/app/assets/stylesheets/plansintroduction/posts.scss
+++ b/app/assets/stylesheets/plansintroduction/posts.scss
@@ -35,3 +35,35 @@
   padding-bottom: 30px;
   width: 430px;
 }
+
+.upvote  {
+  color:#878787;
+  background-color: #fff;
+  padding: 0px ;
+  a {
+    text-decoration:none;
+    color: #878787;
+  }
+  a:hover,
+  a:active,
+  a:focus {
+    text-decoration:none;
+    color: #878787;
+  }
+}
+
+.visit {
+  color:#878787;
+  background-color: #fff;
+  padding: 0px ;
+  a {
+    text-decoration:none;
+    color: #878787;
+  }
+  a:hover,
+  a:active,
+  a:focus {
+    text-decoration:none;
+    color: #878787;
+  }
+}
