--- a/app/views/plansintroduction/posts/index.html.erb
+++ b/app/views/plansintroduction/posts/index.html.erb
@@ -10,8 +10,32 @@
                         <div class="col-xs-6 col-md-6 text-center">
                             <div class="space-50">
                             </div>
+                            <!-- 文章标题  宣传语-->
                             <p class="bg-white post-title"> <%= post.title %> </p>
                             <p class="bg-white post-slogan"> <%= post.slogan %> </p>
+                            <div class="container-fluid" style="width:430px;">
+                                <div class="row" style="background-color:#fff;">
+                                    <!-- 浏览量 -->
+                                    <div class="col-md-3 col-md-offset-3 visit">
+                                        <%= link_to like_plansintroduction_post_path(post), method: :put do %>
+                                            <div class="pi-thumbs-up">
+                                                <i class="fa fa-thumbs-up" , style="color:#878787;"></i>
+                                                <span> <%= post.get_upvotes.size %></span>
+                                            </div>
+                                        <% end %>
+                                    </div>
+                                    <!-- 点赞 -->
+                                    <div class="col-md-3 upvote">
+                                        <%= link_to like_plansintroduction_post_path(post), method: :put do %>
+                                            <div class="pi-thumbs-up">
+                                                <i class="fa fa-thumbs-up" , style="color:#878787;"></i>
+                                                <span> <%= post.get_upvotes.size %></span>
+                                            </div>
+                                        <% end %>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 文章封面 -->
                             <%= link_to post_path(post) do  %>
                                 <% if post.postpic.present? %>
                                     <%= image_tag(post.postpic.url , class: "post-pic") %>
