--- a/app/views/plansintroduction/posts/index.html.erb
+++ b/app/views/plansintroduction/posts/index.html.erb
@@ -40,7 +40,7 @@
                                 <% if post.postpic.present? %>
                                     <%= image_tag(post.postpic.url , class: "post-pic") %>
                                 <% else %>
-                                    <%= image_tag("https://ww4.sinaimg.cn/large/006tNc79ly1fha95j607vj30by04qq32.jpg") %>
+                                    <%= image_tag("https://ww4.sinaimg.cn/large/006tNc79ly1fha95j607vj30by04qq32.jpg", class: "post-pic") %>
                                 <% end %>
                             <% end %>
                         </div>
